@@ -365,7 +365,7 @@ Heap
 
 ```java
 /*
-* * -verbose:gc -Xms20M -Xmx20M -Xmn10m -XX:+PrintGCDetails -XX:SurvivorRatio=8 
+* * -verbose:gc -Xms20M -Xmx20M -Xmn10m -XX:+PrintGCDetails -XX:+SurvivorRatio=8 
 * -XX:+PrintCommandLineFlags ： 打印命令行的标志，打印JVM的启动参数
 * -XX:MaxTenuringThreshold =5： 可以自动调节对象晋升（Promote）到老年代的阈值，设置该阈值的最大值。（理论上的最大值，默认值为15，CMS的默认值是6，G1默认值为15，在JVM中，该数值是由4bit来表示的，所以最大值为1111）
 * -XX:+PrintTenuringDistribution ： 打印出GC过程中对象信息。
@@ -411,3 +411,112 @@ Heap
   class space    used 293K, capacity 386K, committed 512K, reserved 1048576K
 ```
 
+```java
+  /*   -verbose:gc
+       -Xmx200M
+       -Xmn50m
+       -XX:+PrintGCDetails
+       -XX:+PrintCommandLineFlags
+       -XX:MaxTenuringThreshold=3
+       -XX:+PrintTenuringDistribution
+       -XX:TargetSurvivorRatio=60   : 当某个Survivor的空间已经被占用60%，则重新计算对象晋升的阈值TenuringThreshold
+       -XX:+PrintGCDateStamps           ：以时间戳的格式打印GC信息
+       -XX:+UseConcMarkSweepGC    :使用并发的标记清除CMS，进行老年代的垃圾回收
+       -XX:+UseParNewGC    ：使用ParNew进行新生代的垃圾回收*/
+```
+
+# 8 CMS Concurrent Mark Sweep）并发标记清除
+
+## 8.1 概念
+
+- 枚举根节点
+  - 当执行系统停顿下来后，并不需要一个不漏地检查完所有执行上下文和全局的引用位置，虚拟机应当是有办法直接得知哪些地方存放着对象引用。在HotSpot的实现中，是使用一组称为OopMap的数据结构来达到这个目的。
+- 安全点
+  - 在OopMap的协助下，HotSpot可以快速且准确地完成GC Roots枚举，但一个很现实的问题随之而来：可能导致引用关系变化，或者说OopMap内容变化的指令非常多，如果为每一条指令都生成对应的OopMap，那将会需要大量的额外空间，这样GC的空间成本将会变得更高。
+  - 实际上，HotSpot并没有为每条指令都生成OopMap，而只是在“特定的位置”记录了这些信息，这些位置称为**安全点**（Safepoint），**即程序执行时并非在所有地方都能停顿下来开始GC，只有在达到安全点才能暂停。**
+  - Safepoint的选定既不能太少以至于让GC等待时间太长，也不能过于频繁以至于过分增大运行时的负载。所以，安全点的选定基本上是“是否具有让程序长时间执行的特征”为标准进行选定的----因为每条指令执行的时间非常短暂，程序不太可能因为指令流长度太长这个原因而过长时间运行，“长时间执行”的最明显的特征就是指令序列服用，例如方法调用、循环跳转、异常跳转等，所以具有这些功能的指令才会产生Safepoint。
+  - 对于Safepoint，另一个需要考虑的问题是如何在GC发生时让所有线程（这里不包括执行JNI调用的线程）都“跑”到最近的安全点上再停顿下来：**抢占式中断**（Preemptive Suspension）和**主动式中断（Voluntary Suspension）**抢占式中断：它不需要线程的执行代码主动去配合，在GC发生时，首先把所有线程全部中断，如果有线程中断的地方不在安全点，就恢复线程，让它“跑”到安全点上。
+    主动式中断：当GC需要中断线程时，不直接对线程操作，仅仅简单地设置一个标志，各个线程执行时主动去轮询这个标志，发生中断标志位真时就自己中断挂起。轮询标志的地方和安全点时重合的，另外再加上创建对象需要分配内存的地方。
+  - 现在几乎没有虚拟机采用抢占式中断来暂停线程从而相应GC事件。
+- 安全区
+  - 使用Safepoint似乎已经完美地解决了如何进入GC的问题，但实际上情况却并不一定。Safepoint机制保证了程序执行时，在不太长的时间内就会遇到可进入GC的Safepoint。但如果程序在“不执行”的时候呢？所谓的程序不执行就是没有分配CPU时间，典型的例子就是出于Sleep状态或者Blocked状态，这时候线程无法响应JVM的中断请求，JVM也显然不太可能等待线程重新分配CPU时间。对于这种情况，就需要安全区域（Safe Regin）来解决了。
+  - 在线程执行到Safe Region中的代码时，首先标识自己已经进入了Safe Region。那样，在这段时间里JVM要发起GC时，就不用管标识自己为Safe Region状态的线程了。在线程要离开Safe Region时，它要检查系统是否完成了根节点枚举（或者是整个GC过程），如果完成了，那线程就继续执行，否则它就必须等待直到收到可以离开Safe Region的信号为止。
+
+## 8.2 CMS
+
+- CMS（Concurrent Mark Sweep）收集器，以获取最短回收停顿时间为目标，多数应用于互联网站或者B/S系统的服务器端上。
+
+- MS是基于“标记-清除”算法实现的，整个过程大致分为4个步骤：
+  · 初始标记 （CMS initial mark）
+  · 并发标记 （CMS concurrent mark）
+  · 重新标记 （CMS remark）
+  · 并发清除 （CMS concurrent sweep）
+  并发指的是GC线程和用户线程可以同时运行。
+  - 其中，**初始标记和重新标**记这两个步骤仍然需要**“Stop The World”**；
+  - 初始标记只是标记一下GC Roots能直接关联的对象，速度很快；
+  - 并发标记阶段就是进行GC Roots Tracing的过程；
+  - 重新标记阶段则是为了修正并发标记期间因用户程序继续运作而导致标记产生变动的那一部分对象的标记记录，这个阶段的停顿时间一般会比初始标记阶段稍长一些，但远比并发标记的时间短。
+- 优点
+  并发收集、低停顿，Oracle公司的一些官方文档中也称之为并发低停顿收集器（Concurrent Low Pause Collector）
+- 缺点 CMS收集器堆CPU的资源非常敏感；
+  · CMS收集器无法处理**浮动垃圾**（Floating Garbage），可能出现“Concurrent Mode Failure”失败而导致另一次Full GC的产生。如果在应用中老年代增长不是太快，可以适当调高参数-XX:CMSInitiatingOccupancyFraction的值来提高触发百分比，以便降低内存回收次数从而获取更好的性能。要是CMS运行期间预留的内存无法满足程序需要时，虚拟机将启动后备预案：临时启用**Serial Old**收集器来重新进行老年代的垃圾收集，这样停顿时间就长了。所以说参数-XX:CMSInitiatingOccupancyFraction设置太高很容易导致大量“Concurrent Mode Failure”失败，性能反而降低。
+  · 收集结束时会有大量空间碎片产生，空间碎片过多时，将会给大对象分配带来很大麻烦，往往出现老年代还有很大的空间剩余，但是无法找到足够大的连续空间来分配当前对象，不得不提前进行一次Full GC。CMS收集器提供了一个-XX:UseCMSCompactAtFullCollection开关参数（默认就是开启的），用于在CMS收集器顶不住要进行Full GC时开启内存碎片的合并整理过程，内存整理过程是无法并发的，空间碎片问题没有了，但是停顿时间不得不变长。
+  **浮动垃圾**：由于垃圾回收和用户线程是同时进行的，在进行标记或者清除的同时，用户的线程还会去改变对象的引用，使得原来某些对象不是垃圾，但是当CMS进行清理的时候变成了垃圾，CMS收集器无法收集，只能等到下一次GC。
+- **空间分配担保**
+  在发生Minitor GC之前，虚拟机会先检查老年代最大可用的连续空间是否大于新生代所有对象总空间，如果这个条件成立，那么Minitor GC可以确保是安全的。当大量对象在Minitor GC后仍然存活，就需要老年代进行空间分配担保，把Survivor无法容纳的对象直接进入老年代。如果老年代判断到剩余空间不足（根据以往每一次回收晋升到老年代对象容量的平均值为经验值），则进行一次Full GC。
+
+## 8.3 **CMS收集器收集完整详细步骤：**
+
+1. Initial Mark
+2. Concurrent Mark
+3. Concurrent Preclean —并发预先清理
+4. Concurrent Abortable Preclean —并发可失败的预先清理
+5. Final Remark --最终重新标记
+6. Concurrent Sweep —并发清理
+7. Concurrent Reset —并发重置
+
+### 8.3.1 **Initial Mark**
+
+这个是CMS两次stop-the-world事件的其中一次，这个阶段的目标是：标记那些**直接被GC root引用**或者被**年轻代存活对象所引用的所有对象**。（标记的是老年代的对象，CMS是老年代的垃圾收集器）
+
+![](./img/21.png)
+
+### **8.3.2. Concurrent Mark**
+
+这个阶段Garbage Collector会遍历老年代，然后标记所有存活的对象，它会根据上个阶段找到的GC Roots遍历查找。并发标记阶段，它会与用户的应用程序并发运行。并不是所有的老年代存活对象都会被标记，因为在标记期间用户的程序可能会改变一些引用；
+
+![](./img/22.png)
+
+
+
+### 8.3.3 **Concurrent Preclean**
+
+这也是一个并发阶段，与应用的线程并发运行，并不会stop应用的线程。在并发运行的过程中，**一些对象的引用可能会发生变化**，但是这种情况发生时，JVM会将包含这个对象的区域（Card）标记为Dirty，这也就是Card Marking。
+
+在pre-clean阶段，那些能够从Dirty对象到达的对象也会被标记，这个标记做完以后，**dirty card**标记就会被清除了。
+
+![](./img/23.png)
+
+![](./img/24.png)
+
+### 8.3.4 **Concurrent Abortable Preclean**
+
+​		并发阶段，这个阶段是为了承担STW（stop-the-world）中最终标记阶段的工作。这个阶段持续时间依赖于很多的因素，由于这个阶段在重复做很多相同的工作，直接满足一些条件（比如：重复迭代的次数、完成的工作量或者时钟时间等）
+
+### 8.3.5 **Final Remark**
+
+​		这是第二个STW阶段，也是CMS中的最后一个，这个阶段的目标是标记老年代所有的存活对象，由于之前的阶段是并发执行的，gc线程可能跟不上应用程序的变化，为了完成标记老年代所有存活对象的目标，STW就非常有必要的了。
+
+​		通常CMS的Final Remark阶段会在年轻代干净的时候运行，目的就是为了减少连续STW发生的可能性（年轻代存活对象过多的话，也会导致老年代涉及的存活对象会很多）。这个阶段会比前面的几个阶段更复杂一些。
+
+### 8.3.6 Concurrent Sweep
+
+​		经历过前5个阶段之后，老年代所有存活对象都被标记过了，现在可以通过清除算法去清理那些老年代不再使用的对象。这里不需要STW，它是与用户的程序并发运行，清除那些不再使用的对象，回收它们的占用空间为将来使用。
+
+### 8.3.7 **Concurrent Reset**
+
+这个阶段也是并发的，它会重设CMS内部的数据结构，为下次的GC做准备。
+
+### 8.3.8 测试总结
+
+​	CMS通过将大量的工作分散到并发处理阶段来减少STW时间，在这块做得非常优秀，但是CMS也有一些其他的问题。
